<resources xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >
    <string name="a_lesson_must_be_selected_first">A lesson must be selected first.</string>
    <string name="a_class_must_be_selected_first">A lesson must be selected first.</string>
    <string name="about">About</string>
    <string name="about_string_1"><b>Teach a Language! Learn a Language!</b>\n\nLanguageLesson provides a framework for anyone to create and conduct language lessons.\n\nThere on no lessons loaded when the app is first installed. There are however 2 small demo lessons you can install to see how the app works.\n</string>
    <string name="about_string_2">1. Turkish - This demonstrates how text and short audio phrases are presented. (My apologies to Turkey for my poor Turkish pronunciation!)</string>
    <string name="about_string_3">\n2. Japanese - This demonstrates how Youtube videos can be organized into lessons. (<b>Disclaimer</b> - The Youtube videos were produced by the Japanese Society of NYC and there is no connection between this project and the Japanese society. The videos were picked just to demonstrate how videos can be organized in lessons in this app.)</string>
    <string name="about_string_4">\nThe steps to create your own set of language lessons are at http://fisincorporated.com/language-lesson/\n\nPlease email Eric Foertsch (efoertsch@fisincorporated.com) with bug reports or enhancement requests.</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">LanguageLesson</string>
    <string name="audio">Audio</string>
    <string name="audio_image">Audio image</string>
    <string name="audio_options_saved">Audio options saved. Press back to return.</string>
    <string name="after_learning_phrase">After learning phrase</string>
    <string name="backup">Backup</string>
    <string name="backup_cancelled">Backup cancelled</string>
    <string name="backup_database">Backup Database</string>
    <string name="backup_restore_database">Backup/Restore database</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_file_will_be_placed_at">Backup file will be placed on SD card at</string>
    <string name="backup_10_secs">&lt;-10 Secs</string>
    <string name="based_on_phrase_duration">Pause X times phrase duration</string>
    <string name="by_phrase_duration_times_this_number">By phrase duration times this number</string>
    <string name="before_learning_phrase">Before learning phrase</string>
    <string name="can_not_write_to_download_directory">Can not write to download directory: %1$s. Check if write protected.</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel_load_task">Cancel Load</string>
    <string name="cancel_delete_task">Cancel Delete</string>
    <string name="cancel_task">Cancel</string>
    <string name="changes_cancelled_options_not_updated">Changes cancelled. Options not updated.</string>
    <string name="class_x">Class</string>
    <string name="class_no_longer_defined">The previously defined class no longer exists. Please load language file(s) as needed.</string>
    <string name="class_title_for_this_lesson_not_found">The class title for this lesson was found in the list of classes. What was read was Class: %1$s for lesson %2$s.</string>
    <string name="class_lesson_not_defined">Class: %1$s and Lesson: %2$s for this lesson phrase not defined on Class and/or Lesson tabs.</string>
    <string name="congratulations_end_of_lesson">Congratulations! You have reached the end of this lesson.</string>
    <string name="connect_timetout_error">Connect timeout error to url: %1$s. See if you can browse it directly.</string>
    <string name="continuex">Continue</string>
    <string name="decrease_text_size">Decrease text size</string>
    <string name="delete">Delete</string>
    <string name="delete_details">\nDeleted teacher, classes, lessons and language phrases(if not used elsewhere) for \n\nTeacher: %1$s \n\nLanguage to be learned: %2$s \n\nKnown Language: %3$s</string>
    <string name="delete_cancelled">Delete cancelled</string>
    <string name="deletion_completed_successfully">Deletion Completed Successfully</string>
    <string name="delete_language">Delete Language</string>
    <string name="delete_teacher_language">Delete Teacher/Language</string>
    <string name="delete_teacher_language_class">Delete teacher/language/class</string>
    <string name="delete_teacher_language_confirmation">All classes, lessons and language phrases(if not used elsewhere) will be deleted for \nTeacher: %1$s \nLanguage to be learned: %2$s \nKnown Language: %3$s\n\n</string>
    <string name="deleting_classes">Deleting classes.</string>
    <string name="deleting_cross_references">Deleting cross references.</string>
    <string name="deleting_language_phrases">Deleting language phrases.</string>
    <string name="deleting_lessons_by_class">Deleting lessons by class.</string>
    <string name="deleting_language_media">Deleting language media</string>
    <string name="deleting_teacher_info">Deleting teacher info (if not used elsewhere)</string>
    <string name="demo_lesson_url">www.fisincorporated.com/languagelesson/Turkish_demo_download.txt</string>
    <string name="demo_turkish_lesson_url">www.fisincorporated.com/languagelesson/Turkish_demo_download.txt</string>
    <string name="demo_japanese_lesson_url">www.fisincorporated.com/languagelesson/Japanese_demo_download.txt</string>
    <string name="display_known_phrase_when_available">Display known phrase when available</string>
    <string name="description">Description</string>
    <string name="do_you_want_to_cancel_current_operation">Do you want to cancel the current operation?</string>
    <string name="enter_lesson_web_url">Enter the URL for the language lesson file. (Overtype the demo file URL or leave as is to load demo file). </string>
    <string name="enter_lesson_file_name">Enter the file name for the language lesson to be loaded. (Overtype the demo file name or leave as is to load demo file). </string>
    <string name="error_in_media_player">An error occurred in playing a media file. The MediaPlayer error is error code: %1$d  additional code: %2$d.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_reading_language_file">Error reading language file %1$s. Load cancelled.</string>
    <string name="error_reading_file_at_url">Error reading text file at URL: %1$s.\nDetails:\n%2$s</string>
    <string name="error_reading_media_zip_file">Error reading media zip file at URL: %1$s.\nDetails:\n%2$s</string>
    <string name="error_playing_audio_file">An error occurred when audio file was attempted to be played. No further attempts will be made to play audio during this lesson.</string>
    <string name="error_playing_media_file">Error playing media file %1$s. Either not found on web or device.</string>
    <string name="finished_successfully">Finished Successfully</string>
    <string name="finished_with_error">Finished with error</string>
    <string name="first_record_not_teacher_record">First record in file is not a teacher record. The record is: %1$s</string>
    <string name="from_this_device">From this device</string>
    <string name="from_the_web">From the web</string>
    <string name="getting_list_of_classes">Getting list of classes.</string>
    <string name="increase_text_size">Increase text size</string>
    <string name="invalid_order_or_speaker_or_interval_number">Invalid Order, speaker, or interval number on LessonPhrase line for Class: %1$s, Lesson: %2$s. Order and Speaker must be numbers but are Order: %3$s,  Speaker: %4$. Inteval may be blank or number and is %5$s. Please check your spreadsheet and recreate file.</string>
    <string name="invalid_number_repeatXTimes">Invalid number of repeats. It must be a number between %1$d and %2$d.</string>
    <string name="invalid_number_waitXSeconds">Invalid number for Wait this many seconds.  The values must be between %1$f and %2$f or the value must be 0 if the value of %3$s is not zero. </string>
    <string name="invalid_pause_times_duration">Invalid number for Pause X times duration. The values must be between %1$f and %2$f or the value must be 0 if the value of %3$s is not zero.</string>
    <string name="hello_world">Hello world!</string>
    <string name="invalid_order_number_for_class">Invalid order number for class. Please check your spreadsheet and recreate file. What was read for Class: %1$s and Order:%2$s (should be a number).</string>
    <string name="invalid_lesson_order_number">Invalid order number for lesson. Please check your spreadsheet and recreate file. What was read for Class: %1$s for Lesson: %2$s was: %3$s (should be a number).</string>
    <string name="invalid_lesson_phrase_order_number">Invalid order number for a lesson phrase. Please check your spreadsheet and recreate file.</string>
    <string name="known_language">Known language</string>
    <string name="language">Language</string>
    <string name="language_db_maintenance">Language Maintenance</string>
    <string name="language_file_details_to_confirm">Language File Details: \n %1$s.\n\nPress Load to load language file or Cancel.</string>
    <string name="language_file_loaded_successfully">Language file loaded successfully.</string>
    <string name="languge_file_to_be_loaded_from_url">Language file to be loaded from URL : %1$s. Press Load to start load or Cancel.</string>
    <string name="language_integrity_reports">Language Integrity Reports</string>
    <string name="language_maintenance">Language Maintenance</string>
    <string name="language_phrase_xref_missing_for_lesson_phrase">LessonPhrase %1$s from Class: %2$s, Lesson: %3$s, Order: %4$s, Speaker:%5$s may not be listed in column A on the LanguagePhrase tab in the spreadsheet. Please check and recreate the file.</string>
    <string name="language_phrase_missing_for_lesson_phrase2">The %1$d line of the lesson is missing the language phrase. Error info - teacher: %2$s, class: %3$s, lesson: %4$s. Database may be corrupt. Try reloading the language file.</string>
    <string name="language_phrase_xref_missing_for_lesson_phrase2">The %1$d line of the lesson is missing a crossreference to the phrase. Error info - teacher: %2$s, class: %3$s, lesson: %4$s. Database may be corrupt. Try reloading the language file.</string>
    <string name="language_to_be_learned">Language to be learned</string>
    <string name="languagelesson_txt">turkish_language_demo.txt</string>
    <string name="languagetutorial_txt_not_found">The %1$s file could not be found. It should be in: %2$s.</string>
    <string name="last_change">Last change: %1$s \n%2$s \n\nStatus: %3$s.</string>
    <string name="learning_language_media_from">Learning language media from %1$s. \n</string>
    <string name="lesson">Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="lesson_title">Lesson Title</string>
    <string name="load_language_file">Load Language File</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="reset">Reset</string>
    <string name="repeat">Repeat</string>
    <string name="restore">Restore</string>
    <string name="restore_file_will_be_read_from_above_backup_location">Restore file will be read from above backup location</string>
    <string name="restore_database">Restore Database</string>
    <string name="sample_text">Sample Text 12345</string>
    <string name="set_lesson_text_size">Set Lesson Text Size</string>
    <string name="start_lesson">Start Lesson</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_language">Teacher/Language</string>
    <string name="three_spaces"></string>
    <string name="type">Type</string>
</resources>