<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnStartLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_lesson" />

    <Button
        android:id="@+id/btnLanguageMaintenance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStartLesson"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/language_maintenance" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLanguageMaintenance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/about" />

</RelativeLayout>