<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLessonNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/three_spaces"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvLessonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tvLessonType"
            android:layout_alignParentLeft="true"
            android:hint="@string/description"
            android:layout_marginLeft="@dimen/ts10sp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
 	<TextView
            android:id="@+id/tvLessonType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />

       
    </RelativeLayout>

</RelativeLayout>