<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/backup_restore_db_lblbackup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/backup_database"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/backup_restore_db_backup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backup_restore_db_lblbackup"
                android:text="@string/backup_file_will_be_placed_at"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/backup_restore_db_backup_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/backup_restore_db_backup_text"
                android:scrollHorizontally="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/backup_restore_db_btnBackup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/backup_restore_db_backup_loc"
                android:text="@string/backup" />

            
        </RelativeLayout>

    <View style="@style/Divider"/>
    
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/backup_restore_db_lblrestore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/restore_database"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/backup_restore_db_restore_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backup_restore_db_lblrestore"
                android:text="@string/restore_file_will_be_read_from_above_backup_location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            
            <Button
                android:id="@+id/backup_restore_db_btnRestore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/backup_restore_db_restore_text"
                
                android:text="@string/restore" />

            
        </RelativeLayout>
    
   </LinearLayout> 
</ScrollView>
