<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/rlHeader1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/rlHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:background="@drawable/border_black_rounded_corner" >

            <TextView
                android:id="@+id/tvTeacherLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/teacher_language"
                android:scrollHorizontally="true"
                
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTeacherLanguage"
                android:hint="@string/class_x"
                android:scrollHorizontally="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvLessonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlHeader2"
            android:ellipsize="end"
            android:text="@string/lessons"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/rlHeader1"
         
        android:clickable="true"
        android:divider="@color/black"
        android:dividerHeight="@dimen/ts1sp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />

</RelativeLayout>